# klippain-shaketune

./: .git-blame-ignore-revs  .gitignore  MAINTNENCE.md  README.md  install.sh  install_swap_access.sh  moonraker.conf  pyproject.toml  requirements.txt  system-dependencies.json
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: test.yml
K-ShakeTune/: IS_shaper_calibrate.cfg  IS_vibrations_measurements.cfg  IS_workflow_cmd.cfg  K-SH_axis.cfg  K-SH_belts.cfg  K-SH_vibrations.cfg  K-SnT_axes_map.cfg  K-SnT_axis.cfg  K-SnT_belts.cfg  K-SnT_directional_vibrations.cfg  K-SnT_speed_vibrations.cfg  K-SnT_static_freq.cfg  K-SnT_vibrations.cfg  _.include  shaketune.sh  shaketune_cmd.cfg  variables  variables.cfg
K-ShakeTune/scripts/: analyze_axesmap.py  common_func.py  graph_belts.py  graph_dir_vibrations.py  graph_shaper.py  graph_speed_vibrations.py  graph_vibrations.py  is_workflow.py  locale_utils.py  shaketune.sh
KISSY/: IS_workflow_cmd.cfg
KISSY/scripts/: graph_shaper.py  is_workflow.py
ci/smoke-test/: klipper-smoketest.kconfig
docs/: README.md  is_tuning_generalities.md  k_shaketune.md
docs/macros/: axes_map_calibration.md  axes_shaper_calibrations.md  axis_tuning.md  belts_tuning.md  vibrations_tuning.md  (+4 more)
is_workflow/: IS_workflow_cmd.cfg
shaketune/: __init__.py  __main__.py  cli.py  dummy_macros.cfg  motor_res_filter.py  shaketune.py  shaketune_config.py  shaketune_process.py  shaketune_thread.py  swap_manager.py
src/: analyze_axesmap.py  graph_belts.py  graph_shaper.py  graph_vibrations.py  is_workflow.py  locale_utils.py
(+63 files in other folders)
